# UCV-ate-si-laboratorio07

./: README.md
si-image-processing-lab/: pyproject.toml  sonar-project.properties
si-image-processing-lab/.github/workflows/: ci.yml
si-image-processing-lab/conf/base/: catalog.yml  parameters.yml
si-image-processing-lab/src/si_image_processing/: pipeline_registry.py
si-image-processing-lab/src/si_image_processing/pipelines/image_processing/: nodes.py  pipeline.py
si-image-processing-lab/tests/: test_image_processing.py
