[tool.poetry]
name = "si-image-processing-lab"
version = "0.1.0"
description = "Laboratorio profesional de procesamiento de imágenes con Kedro, Poetry, GitHub Actions y SonarQube"
authors = ["UCV - Ingeniería de Sistemas"]
readme = "README.md"
packages = [{ include = "si_image_processing", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
kedro = "^0.19.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "si_image_processing"
project_name = "si-image-processing-lab"
kedro_init_version = "0.19.0"
tools = []
example_pipeline = "False"
source_dir = "src"
[tool.kedro_telemetry]
project_id = "2347238a1faa4639b8876bb648d74fa8"
